[package]
name = "aoc-2019"
version = "0.1.0"
description = "Solutions to the 2019 edition of the Advent of Code"
edition = "2018"
authors = ["Nicolas Polomack <nicolas@polomack.eu>"]

[dependencies]
rayon = { version = "1.2.1" }
derive_more = { version = "0.99.2" }
itertools = { version = "0.8.2" }
async-std = { version = "1.2.0", features = ["attributes", "unstable"] }
futures = "0.3.1"
